--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
         "test": "vitest"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.1.0",
+        "@tanstack/react-query": "^5.17.19",
         "axios": "^1.6.7",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-query": "^3.39.3",
+        "react-redux": "^9.1.0",
         "react-router-dom": "^6.21.3"
     },
     "devDependencies": {
